# hybrid_llm_platform

./: .gitignore  Cargo.toml  README.md  client.rs  gpu_batcher.rs  gpu_client.rs  gpu_shard.rs  interleave_api.rust  interleave_scheduler.rs  parallel_batcher.rs  parallel_scheduler.rs  requirements.txt  rust_quantum_integration.rs  streaming_quantum_scheduler.rs
docker/: api.Dockerfile  gpu-worker.Dockerfile  quantum-worker.Dockerfile
examples/: e2e_demo.rs
frontend/dashboard/: package-lock.json  package.json
frontend/dashboard/public/: index.html
frontend/dashboard/src/: Dashboard.jsx  index.js
k8s/: api-deployment.yaml  gpu-workers.yaml  namespace.yaml  quantum-workers.yaml  redis.yaml  service.yaml
python_quantum/: compressed_tensor.py  demo_pipeline.py  full-model-block-wise.py  optimize_full_model.py  py_full_model.py  qaoa_prompt_opt.py  quantum_optimizer.py  requirements.txt  transformer_embed.py
src/: gpu_batcher.rs  gpu_shard.rs  lib.rs  main.rs  metrics_ws.rs  model_registry.rs  session.rs  streaming_quantum_scheduler.rs
src/api/: mod.rs  model.rs
src/inference/: backend_negotiator.rs  batcher.rs  batcher_api.rs  cpu.rs  gpu.rs  mod.rs  scheduler.rs  stream_api.rs
src/model_registry/: artifact.rs  curated_model.rs  ranked_artifact.rs  ranker.rs
src/quantization/: mod.rs  quantum.rs  search.rs
src/scheduler/: automorphism.rs  callback_log.rs  execution_graph.rs  mod.rs  override_engine.rs  path_optimizer.rs
tests/: integration.rs
