[package]
name = "hybrid-llm-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.6", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.17"
pyo3 = { version = "0.19", features = ["auto-initialize"] }
ndarray = "0.15"
futures = "0.3"
rand = "0.8"
tokio-stream = "0.1"